CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.2:
 20: (2011-02-xx)
  Variable: null unit string bug
  GridHorizCoordSys: allow gaussian lats NP != NY
 19: (2011-02-01)
  Nexrad2: dual pole radar offset bug
  H4header: workaround for bad hdf4 
  HTTPClient refactor / framework
  opendap bison parser
  CSMConvention looks for date and time units
  H5header.showBytes() -> Misc
  GridPointWriter fix from Don
  ToolsUI: GribReportPanel
  NcStreamGrammer version 1
  cdmRemote sequences, getStructureIterator
  IospHelper.makeArrayBB
  ncstream was relying on assert to be enabled (!)
  TableAnalyser CdmDirect added
  StructureData.convertScalarLong() added
  StructureDataComposite use member lookup by name (!)
  NCdumpW.printArray() had ArrayStructure before ArraySequence (!)
  DefaultConventions uses short name
 18: (2010-12-23)
  N4: vlen not setting byteOrder
  ncss bug when time subsetting FMRC datasets - time_run axis was not getting subsetted.
  MetadataManager.closeAll() bug
  GridDatasetInv looks for run time inside file if needed.
  TdsMonitor : put dns cache directory under home/tdsMonitor; add reverse hostname to access/user table
  fix close bug in MetadataManager (bdb closing)
  GridCoordSys.getDateRange() now works for 2D time coord. get<NamedObject> deprecated.
  mavenized: combine common, unidataCommon; split bufr, bufrTables
  FMRC bug in constant offset datasets when offset didnt start at 0.
  protobuf-2.3.0
  UI: CatalogCopier, GribReportPanel
  ucar.ma2.ArrayScalar
  ucar.nc2.iosp.noaa.Ghcnm IOSP: StructureDataAscii, improve TableParser
 17: (2010-11-30)
  Attribute tolerate null value
  NcMLWriter check for null attribute
  H5: Off by 1 error in DoublingTable
 16: (2010-11-24)
  Improve diagnostic on Aggregation / no datasets found
  H5/N4 non-string vlen bug.
  GridVariable ensemble coordinate - use perturbation number and enseble type
  Grib2 Template 11 bug reading forecast time