@@ -43,7 +43,7 @@ public class TestDODS {
   public static String server = "http://test.opendap.org:8080/dods/dts/";
 
   public static junit.framework.Test suite ( ) {
-    TestSuite suite= new TestSuite();
+    TestSuite suite= new TestSuite();    
 
     // just read em and see if they weep
     suite.addTest(new TestSuite(TestDODSRead.class)); //
