@@ -39,6 +39,7 @@ import java.util.Properties;
 
 import junit.framework.JUnit4TestAdapter;
 import junit.framework.TestSuite;
+import thredds.server.opendap.TestCEEvaluator;
 
 /**
  * TestSuite that runs all TDS unit tests.
@@ -57,6 +58,8 @@ public class TestAll
     suite.addTestSuite( thredds.util.TestStartsWithPathAliasReplacement.class );
     suite.addTestSuite( thredds.util.TestStringValidateEncodeUtils.class );
     suite.addTest( thredds.util.filesource.TestAll.suite() );
+
+    suite.addTest(new TestSuite(TestCEEvaluator.class));    
 
     return suite;
   }
